Se agrego un Form al index

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>DemoGit</title>
 </head>
 <body>
-    <h1>Titulo nuevo Modificado/h1>
+    <h1>Titulo nuevo Modificado </h1>
+        <form action="#" method="get">
+            <input type="text" name="name" id="name">
+            <input type="button" value="Enviar">
+        </form>
 </body>
 </html>
