--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
     <h1>Titulo nuevo Modificado </h1>
         <form action="#" method="get">
-            <input type="text" name="name" id="name">
+            <input type="text" name="firstName" id="firstName">
+            <input type="text" name="lastName" id="lastName">
             <input type="button" value="Enviar">
         </form>
 </body>
