--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <input type="text" name="firstName" id="firstName">
             <input type="text" name="lastName" id="lastName">
             <input type="button" value="Enviar">
+            <input type="button" value="PerrosM">
         </form>
 </body>
 </html>
