se anadio nuevo header 2

--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
             <input type="text" name="Age" id="Age"> 
             <input type="button" value="Enviar">
         </form>
+    <h2>aqui se pone nueva info</h2>    
 </body>
 </html>
