--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
             <input type="text" name="Age" id="Age"> 
             <input type="button" value="Enviar">
         </form>
+        <h2>Este es un nuevo header para las pruebas</h2>
 </body>
 </html>
